[package]
name = "steam-cdn"
version = "0.1.0"
edition = "2021"
description = "Steam CDN"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
steam-vent = { git = "https://github.com/AspectUnk/steam-vent.git" }
serde = { version = "1.0", features = ["derive"] }
keyvalues-parser = "0.2"
reqwest = { version = "0.11", features = ["json", "rustls"] }
thiserror = "1.0"
zip = "2.2"
itertools = "0.13"
bytes = "1.7"
base64 = "0.22"
protobuf = "3.5"
aes = "0.8"
cbc = "0.1"
